--- a/Index.HTML
+++ b/Index.HTML
@@ -34,10 +34,12 @@
         </form>
         <section class="result-box result-box-default" id="result">
             <h2 id="status">Adivinhe o número sorteado!</h2>
-            <span>Tentativa:<span id="attempt">0</span>
+            <span>Tentativa:<span id="attempt">0</span></span>
+            
         </section>
-
         <button id="btn-restart" onclick="restartGame()">Jogar de novo</button>
+        
+
     </main>
 
     <footer>
